tests: move test_bkdev to lib/
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -578,6 +578,7 @@ fdisk/Makefile
 getopt/Makefile
 hwclock/Makefile
 include/Makefile
+lib/Makefile
 login-utils/Makefile
 misc-utils/Makefile
 mount/Makefile
