--- a/tests/helpers/Makefile.am
+++ b/tests/helpers/Makefile.am
@@ -1,8 +1,4 @@
 include $(top_srcdir)/config/include-Makefile.am
 
-noinst_PROGRAMS = test_sysinfo test_blkdev
-
-test_blkdev_SOURCES = 	$(top_srcdir)/lib/blkdev.c \
-			$(top_srcdir)/lib/linux_version.c
-test_blkdev_CFLAGS = -DMAIN_TEST_BLKDEV
+noinst_PROGRAMS = test_sysinfo
 
