build-sys: use portable $(VAR:=) instead of gmake-specific $(addsuffix)
Signed-off-by: Stepan Kasal <skasal@redhat.com>

--- a/sys-utils/Makefile.am
+++ b/sys-utils/Makefile.am
@@ -80,7 +80,7 @@ if ARCH_HPPA
 SETARCH_LINKS += parisc parisc64 parisc32
 endif
 
-SETARCH_MAN_LINKS = $(addsuffix .8, $(SETARCH_LINKS))
+SETARCH_MAN_LINKS = $(SETARCH_LINKS:=.8)
 dist_man_MANS += $(SETARCH_MAN_LINKS)
 CLEANFILES=$(SETARCH_MAN_LINKS)
 
