sys-utils: correct setarch.8 manpage link creation
At least on Debian, .so commands are relative to the man directory
(e.g., /usr/share/man), not to the subdirectory:
    % man i386
    man: can't open /usr/share/man/setarch.8: No such file or directory
    No manual entry for i386

See also http://bugs.debian.org/453245

Addresses-Debian-Bug: #453245
Signed-off-by: Frédéric Bothamy <frederic.bothamy@free.fr>
Signed-off-by: LaMont Jones <lamont@debian.org>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/sys-utils/Makefile.am
+++ b/sys-utils/Makefile.am
@@ -76,10 +76,10 @@ man_MANS = $(RDEV_MAN_LINKS) $(SETARCH_MAN_LINKS)
 CLEANFILES = $(man_MANS)
 
 $(RDEV_MAN_LINKS): rdev.8
-	echo ".so rdev.8" > $@
+	echo ".so man8/rdev.8" > $@
 
 $(SETARCH_MAN_LINKS): setarch.8
-	echo ".so setarch.8" > $@
+	echo ".so man8/setarch.8" > $@
 
 install-exec-hook:
 	for I in $(RDEV_LINKS); do \
