build-sys: update .gitignore files
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/sys-utils/.gitignore
+++ b/sys-utils/.gitignore
@@ -11,6 +11,28 @@ rtcwake
 setarch
 setsid
 tunelp
+arch
+vidmode.8
+ramsize.8
+rdev
+i386.8
+ia64.8
 linux32.8
 linux64.8
-i386.8
+mips32.8
+mips64.8
+mips.8
+parisc32.8
+parisc64.8
+parisc.8
+ppc32.8
+ppc64.8
+ppc.8
+rootflags.8
+s390.8
+s390x.8
+sparc32.8
+sparc32bash.8
+sparc64.8
+sparc.8
+x86_64.8
