disk-utils: clean up code, use blkdev_* functions
[kzak@redhat.com: split the original patch to small patches]

Signed-off-by: Samuel Thibault <samuel.thibault@ens-lyon.org>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/disk-utils/Makefile.am
+++ b/disk-utils/Makefile.am
@@ -2,25 +2,26 @@ include $(top_srcdir)/config/include-Makefile.am
 
 utils_common = ../lib/blkdev.c
 if LINUX
-utils_common += ../lib/linux_version.c 
+utils_common += ../lib/linux_version.c
 endif
 
-dist_man_MANS = blockdev.8 isosize.8 mkfs.8 mkswap.8 \
+dist_man_MANS = isosize.8 mkfs.8 mkswap.8 \
            fsck.minix.8 mkfs.minix.8 mkfs.bfs.8
 
-sbin_PROGRAMS = mkfs mkswap blockdev fsck.minix mkfs.minix mkfs.bfs
+sbin_PROGRAMS = mkfs mkswap fsck.minix mkfs.minix mkfs.bfs
 fsck_minix_SOURCES = fsck.minix.c bitops.h minix.h
 mkfs_minix_SOURCES = mkfs.minix.c bitops.h minix.h $(utils_common)
-mkfs_bfs_SOURCES = mkfs.bfs.c
+mkfs_bfs_SOURCES = mkfs.bfs.c $(utils_common)
 mkswap_SOURCES = mkswap.c swapheader.h $(utils_common)
-blockdev_SOURCES = blockdev.c $(utils_common)
 
 usrbinexec_PROGRAMS = isosize
 usrsbinexec_PROGRAMS =
 
 if LINUX
-dist_man_MANS += fdformat.8
+dist_man_MANS += fdformat.8 blockdev.8
+sbin_PROGRAMS += blockdev
 usrsbinexec_PROGRAMS += fdformat
+blockdev_SOURCES = blockdev.c $(utils_common)
 endif
 
 if BUILD_ELVTUNE
@@ -38,8 +39,8 @@ endif
 
 if BUILD_CRAMFS
 sbin_PROGRAMS += fsck.cramfs mkfs.cramfs
-fsck_cramfs_SOURCES = fsck.cramfs.c cramfs.h
-mkfs_cramfs_SOURCES = mkfs.cramfs.c cramfs.h ../lib/md5.c
+fsck_cramfs_SOURCES = fsck.cramfs.c cramfs.h $(utils_common)
+mkfs_cramfs_SOURCES = mkfs.cramfs.c cramfs.h ../lib/md5.c $(utils_common)
 fsck_cramfs_LDADD = -lz
 mkfs_cramfs_LDADD = -lz
 endif
