mount: add fallback for versionsort()
I was trying to build util-linux-ng on uclibc and it failed

| lomount.c: In function 'looplist_next':
| lomount.c:223: error: 'versionsort' undeclared (first use in this function)
| lomount.c:223: error: (Each undeclared identifier is reported only once
| lomount.c:223: error: for each function it appears in.)
| make[2]: *** [mount-lomount.o] Error 1
|

which is understood because versionsort is GNU extension and uclibc does
not implement it.

Reported-by: Khem Raj <raj.khem@gmail.com>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -72,8 +72,13 @@ AC_CHECK_FUNCS(
 	updwtmp \
 	lchown \
 	inotify_init \
+	versionsort \
 	rpmatch])
 AC_FUNC_FSEEKO
+
+have_versionsort=no
+AC_CHECK_FUNC([versionsort], [have_versionsort=yes])
+AM_CONDITIONAL([HAVE_VERSIONSORT], test "x$have_versionsort" = xyes)
 
 dnl Static compilation
 m4_define([UTIL_STATIC_PROGRAMS], [losetup, mount, umount, fdisk, sfdisk])
