blkid: create basic directories
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -709,6 +709,8 @@ getopt/Makefile
 hwclock/Makefile
 include/Makefile
 lib/Makefile
+libs/Makefile
+libs/blkid/Makefile
 login-utils/Makefile
 misc-utils/Makefile
 mount/Makefile
