--- a/libs/blkid/Makefile.am
+++ b/libs/blkid/Makefile.am
@@ -1,3 +1,7 @@
 include $(top_srcdir)/config/include-Makefile.am
 
-EXTRA_DIST = README.fsprobe
+# pkg-config stuff
+pkgconfigdir = $(usrlibexecdir)/pkgconfig
+pkgconfig_DATA = blkid.pc
+
+EXTRA_DIST = README.blkid blkid.pc blkid.pc.in
