--- a/libs/blkid/Makefile.am
+++ b/libs/blkid/Makefile.am
@@ -1,7 +1,12 @@
 include $(top_srcdir)/config/include-Makefile.am
 
+SUBDIRS = src
+
 # pkg-config stuff
 pkgconfigdir = $(usrlibexecdir)/pkgconfig
 pkgconfig_DATA = blkid.pc
 
-EXTRA_DIST = README.blkid blkid.pc blkid.pc.in
+dist_man_MANS = libblkid.3
+
+EXTRA_DIST = README.blkid blkid.pc blkid.pc.in libblkid.3.in
+
