blkid: add low level probing API
(sorry from the huge patch..)

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/config/include-Makefile.am
+++ b/config/include-Makefile.am
@@ -5,6 +5,7 @@ usrsbinexecdir = ${exec_prefix}/sbin
 AM_CPPFLAGS = -include $(top_builddir)/config.h -I$(top_srcdir)/include \
 	-DLOCALEDIR=\"$(localedir)\"
 AM_CFLAGS = -fsigned-char
+AM_LDFLAGS =
 
 # Automake (at least up to 1.10) mishandles dist_man_MANS inside conditionals.
 # Unlike with other dist primaries, the files are not distributed if the
