--- a/libs/blkid/Makefile.am
+++ b/libs/blkid/Makefile.am
@@ -1,12 +1,12 @@
 include $(top_srcdir)/config/include-Makefile.am
 
-SUBDIRS = src
+SUBDIRS = src bin
 
 # pkg-config stuff
 pkgconfigdir = $(usrlibexecdir)/pkgconfig
 pkgconfig_DATA = blkid.pc
 
-dist_man_MANS = libblkid.3
+dist_man_MANS = libblkid.3 blkid.8
 
-EXTRA_DIST = README.blkid blkid.pc blkid.pc.in libblkid.3.in
+EXTRA_DIST = README.blkid blkid.pc blkid.pc.in libblkid.3.in blkid.8.in
 
