--- a/libs/blkid/src/Makefile.am
+++ b/libs/blkid/src/Makefile.am
@@ -1,12 +1,17 @@
 include $(top_srcdir)/config/include-Makefile.am
 
-AM_CPPFLAGS += -I$(top_builddir)/blkid/src
+SUBDIRS = probers .
+
+AM_CPPFLAGS += -I$(top_builddir)/libs/blkid/src
+
+probers = prober-cramfs.c
 
 # static library
 lib_LIBRARIES = libblkid.a
 libblkid_a_SOURCES = cache.c dev.c devname.c devno.c getsize.c llseek.c  \
-		     probe.c read.c resolve.c save.c tag.c version.c \
-		     blkid.h blkidP.h list.h blkid_types.h
+		     probe.c read.c resolve.c save.c tag.c version.c verify.c \
+		     blkid.h blkidP.h list.h blkid_types.h probers/probers.h
+libblkid_a_LIBADD = probers/libprobers.a
 libblkid_a_CFLAGS = -fPIC
 
 # shared library (note that we don't use LIBTOOL!)
@@ -15,9 +20,13 @@ blkid_LDSCRIPT = $(srcdir)/blkid.sym
 blkid_LIB = $(blkid_IMAGE).$(BLKID_VERSION)
 blkid_SONAME = $(blkid_IMAGE).$(BLKID_VERSION_MAJOR)
 blkid_LINKS = $(blkid_IMAGE) $(blkid_SONAME)
+blkid_OTHERLDADD =
 
 if HAVE_DEVMAPPER
-blkid_OTHERLDADD = $(DEVMAPPER_LIBS)
+blkid_OTHERLDADD += $(DEVMAPPER_LIBS)
+endif
+if HAVE_UUID
+blkid_OTHERLDADD += -luuid	#TODO $(UUID_LIBS)
 endif
 
 EXTRA_DIST = blkid.sym blkid_types.h.in
@@ -27,7 +36,7 @@ all-local: $(blkid_LIB)
 $(blkid_LIB): $(lib_LIBRARIES) $(blkid_LDSCRIPT)
 	$(CC) --shared -o $(blkid_LIB) $(AM_LDFLAGS) \
               -Wl,-soname,$(blkid_SONAME),--version-script,$(blkid_LDSCRIPT) \
-	      $(libblkid_a_OBJECTS) $(blkid_OTHERLDADD)
+	      $(libblkid_a_OBJECTS) probers/libprobers.a $(blkid_OTHERLDADD)
 	for I in $(blkid_LINKS); do \
 		ln -sf $(blkid_LIB) $$I; \
 	done
