blkid: add DDF raid
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/libs/blkid/src/probers/Makefile.am
+++ b/libs/blkid/src/probers/Makefile.am
@@ -4,9 +4,10 @@ AM_CPPFLAGS += -I$(top_builddir)/libs/blkid/src
 
 lib_LIBRARIES = libprobers.a
 libprobers_a_CFLAGS = -fPIC
-libprobers_a_SOURCES = 	probers.h \
+libprobers_a_SOURCES =	probers.h \
 			cramfs.c \
 			swap.c \
-			adaptec_raid.c
+			adaptec_raid.c \
+			ddf_raid.c
 
 all-local: $(lib_LIBRARIES)
