blkid: add ISW raid
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/libs/blkid/src/probers/Makefile.am
+++ b/libs/blkid/src/probers/Makefile.am
@@ -8,6 +8,7 @@ libprobers_a_SOURCES =	probers.h \
 			cramfs.c \
 			swap.c \
 			adaptec_raid.c \
-			ddf_raid.c
+			ddf_raid.c \
+			isw_raid.c
 
 all-local: $(lib_LIBRARIES)
