blkid: add JMicron RAID
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/libs/blkid/src/probers/Makefile.am
+++ b/libs/blkid/src/probers/Makefile.am
@@ -9,6 +9,7 @@ libprobers_a_SOURCES =	probers.h \
 			swap.c \
 			adaptec_raid.c \
 			ddf_raid.c \
-			isw_raid.c
+			isw_raid.c \
+			jmicron_raid.c
 
 all-local: $(lib_LIBRARIES)
