blkid: NVIDIA raid
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/libs/blkid/src/probers/Makefile.am
+++ b/libs/blkid/src/probers/Makefile.am
@@ -11,6 +11,7 @@ libprobers_a_SOURCES =	probers.h \
 			ddf_raid.c \
 			isw_raid.c \
 			jmicron_raid.c \
-			lsi_raid.c
+			lsi_raid.c \
+			nvidia_raid.c
 
 all-local: $(lib_LIBRARIES)
