blkid: add Silicon Image Medlay RAID
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/libs/blkid/src/probers/Makefile.am
+++ b/libs/blkid/src/probers/Makefile.am
@@ -13,6 +13,7 @@ libprobers_a_SOURCES =	probers.h \
 			jmicron_raid.c \
 			lsi_raid.c \
 			nvidia_raid.c \
-			promise_raid.c
+			promise_raid.c \
+			silicon_raid.c
 
 all-local: $(lib_LIBRARIES)
