blkid: add Linux RAID
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/libs/blkid/src/probers/Makefile.am
+++ b/libs/blkid/src/probers/Makefile.am
@@ -15,6 +15,7 @@ libprobers_a_SOURCES =	probers.h \
 			nvidia_raid.c \
 			promise_raid.c \
 			silicon_raid.c \
-			via_raid.c
+			via_raid.c \
+			linux_raid.c
 
 all-local: $(lib_LIBRARIES)
