--- a/libs/blkid/src/Makefile.am
+++ b/libs/blkid/src/Makefile.am
@@ -10,7 +10,8 @@ probers = prober-cramfs.c
 lib_LIBRARIES = libblkid.a
 libblkid_a_SOURCES = cache.c dev.c devname.c devno.c getsize.c llseek.c  \
 		     probe.c read.c resolve.c save.c tag.c version.c verify.c \
-		     blkid.h blkidP.h list.h blkid_types.h probers/probers.h
+		     blkid.h blkidP.h list.h blkid_types.h probers/probers.h \
+		     $(top_srcdir)/lib/blkdev.c $(top_srcdir)/lib/linux_version.c
 libblkid_a_LIBADD = probers/libprobers.a
 libblkid_a_CFLAGS = -fPIC
 
