build-sys: add -luuid to BLKID_LIBS
The libblkid is always linked with libuuild, so this indirect
dependence in BLKID_LIBS is not a problem. This change helps to people
who compile util-linux-ng with non-standard prefix, ..etc.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -175,7 +175,7 @@ AC_DEFUN([UTIL_PKG_STATIC], [
 ])
 
 # These default values should work in most cases:
-: ${BLKID_LIBS='-lblkid'}
+: ${BLKID_LIBS='-lblkid -luuid'}
 : ${VOLUMEID_LIBS='-lvolume_id'}
 
 # ... but for static build, we need to consult pkg-config:
