add reiser and reiser4
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/libs/blkid/src/probers/Makefile.am
+++ b/libs/blkid/src/probers/Makefile.am
@@ -22,6 +22,7 @@ libprobers_a_SOURCES =	probers.h \
 			ext.c \
 			gfs.c \
 			ocfs.c \
+			reiserfs.c \
 			romfs.c
 
 all-local: $(lib_LIBRARIES)
