blkid: add HFS and HFS+
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/libs/blkid/src/probers/Makefile.am
+++ b/libs/blkid/src/probers/Makefile.am
@@ -23,6 +23,7 @@ libprobers_a_SOURCES =	probers.h \
 			gfs.c \
 			ocfs.c \
 			reiserfs.c \
-			romfs.c
+			romfs.c \
+			hfs.c
 
 all-local: $(lib_LIBRARIES)
